--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "aa-ahmed-aa",
   "license": "ISC",
   "dependencies": {
+    "node-cron": "^1.2.1",
     "request": "^2.85.0",
     "twit": "^2.2.9"
   }
